--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'commons-codec:commons-codec:1.3'
     compile 'com.google.code.gson:gson:2.2.+'
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    compile group: 'commons-io', name: 'commons-io', version: '2.4'
 }
