--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,37 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="io.frappe.frappeauthenticator"
-          android:versionCode="1"
-          android:versionName="1.0">
-
-    <application
-            android:label="@string/app_name"
-            android:icon="@drawable/frappe">
-
-        <!-- *** Not really needed here, but convenient for copying to other apps that will use this module *** -->
-        <activity android:name="io.frappe.frappeauthenticator.authenticator.AuthenticatorActivity"/>
-        <service android:name="io.frappe.frappeauthenticator.authenticator.FrappeAuthenticatorService">
-            <intent-filter>
-                <action android:name="android.accounts.AccountAuthenticator" />
-            </intent-filter>
-            <meta-data android:name="android.accounts.AccountAuthenticator"
-                       android:resource="@xml/authenticator" />
-        </service>
-        <service android:name="io.frappe.frappeauthenticator.sync.ContactsSyncAdapterService"
-            android:exported="true" android:process=":contacts">
-            <intent-filter>
-                <action android:name="android.content.SyncAdapter" />
-            </intent-filter>
-            <meta-data android:name="android.content.SyncAdapter"
-                android:resource="@xml/sync_contacts" />
-            <!--<meta-data android:name="android.provider.CONTACTS_STRUCTURE"-->
-                <!--android:resource="@xml/contacts" />-->
-        </service>
-    </application>
+    package="io.frappe.frappeauthenticator"
+    android:versionCode="1"
+    android:versionName="1.0">
 
     <!-- *** Not really needed here, but convenient for copying to other apps that will use this module *** -->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
@@ -39,4 +14,46 @@
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+
+    <application
+        android:icon="@drawable/frappe"
+        android:label="@string/app_name">
+
+        <!-- *** Not really needed here, but convenient for copying to other apps that will use this module *** -->
+        <activity android:name=".authenticator.AuthenticatorActivity" />
+
+        <service android:name=".authenticator.FrappeAuthenticatorService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+        <service
+            android:name=".sync.ContactsSyncAdapterService"
+            android:exported="true"
+            android:process=":contacts">
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/sync_contacts" />
+            <!-- <meta-data android:name="android.provider.CONTACTS_STRUCTURE" -->
+            <!-- android:resource="@xml/contacts" /> -->
+        </service>
+
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
+
 </manifest>
