--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <application
         android:icon="@drawable/frappe"
         android:label="@string/app_name"
-        android:name=".ApplicationController">
+        android:name=".sync.ApplicationController">
 
         <!-- *** Not really needed here, but convenient for copying to other apps that will use this module *** -->
         <activity android:name=".authenticator.AuthenticatorActivity" />
@@ -47,13 +47,5 @@
             <!-- <meta-data android:name="android.provider.CONTACTS_STRUCTURE" -->
             <!-- android:resource="@xml/contacts" /> -->
         </service>
-
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 </manifest>
