--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         android:label="@string/app_name">
 
         <!-- *** Not really needed here, but convenient for copying to other apps that will use this module *** -->
-        <activity android:name=".authenticator.AuthenticatorActivity" />
+        <activity
+            android:name=".authenticator.AuthenticatorActivity"
+            android:exported="true" />
 
         <service android:name=".authenticator.FrappeAuthenticatorService">
             <intent-filter>
