--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "io.frappe.frappeauthenticator"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -20,16 +20,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    //compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'commons-codec:commons-codec:1.3'
-    compile 'com.google.code.gson:gson:2.2.+'
+    //compile 'com.android.support:appcompat-v7:25.1.1'
     // https://mvnrepository.com/artifact/commons-io/commons-io
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
     compile group: 'org.aksw.gson', name: 'gson-utils-core', version: '1.0.0'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'commons-codec:commons-codec:1.10'
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.android.support:support-v4:25.1.1'
+    testCompile 'junit:junit:4.12'
 }
