--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,18 @@
                 android:resource="@xml/contacts" />
         </service>
 
+        <service
+            android:name=".sync.EventsSyncAdapterService"
+            android:exported="true"
+            android:process=":events">
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/sync_calendar" />
+        </service>
         <activity
             android:name=".sync.ProfileActivity"
             android:exported="true"
@@ -72,9 +84,6 @@
                 <data android:mimeType="vnd.android.cursor.item/vnd.io.frappe.frappeauthenticator.contact" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".sync.ViewingActivity"
-            android:label="@string/title_activity_viewing"></activity>
     </application>
 
 </manifest>
