--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "io.frappe.frappeauthenticator"
-        minSdkVersion 19
+        minSdkVersion 22
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -30,5 +30,6 @@ dependencies {
     compile 'commons-codec:commons-codec:1.3'
     compile 'com.google.code.gson:gson:2.2.+'
     // https://mvnrepository.com/artifact/commons-io/commons-io
+    compile 'com.android.support:design:25.0.0'
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
 }
